--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,14 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+
+# do this before all your .NET Core tasks
+steps:
+- task: UseDotNet@2
+  displayName: 'Install .NET Core SDK'
+  inputs:
+    version: 2.2.x
+# ...
+
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
