--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,7 @@ steps:
   inputs:
     version: $(sdkVersion)
 
-- script: dotnet build --configuration $(buildConfiguration)
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build --configuration $(buildConfiguration)'
   displayName: 'dotnet build $(buildConfiguration)'
