--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,5 +27,6 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'build --configuration $(buildConfiguration)'
+    command: 'build'
+    configuration: '$(buildConfiguration)'
   displayName: 'dotnet build $(buildConfiguration)'
