--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,3 @@
-
 trigger:
   branches:
     include:
@@ -21,9 +20,15 @@ variables:
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Install .NET Core SDK'
   inputs:
     version: $(sdkVersion)
+  displayName: 'Install .NET Core SDK'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: restore
+    projects: '**/*.csproj'
+  displayName: 'Restore nuget packages'
 
 - task: DotNetCoreCLI@2
   inputs:
