--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,3 +45,13 @@ steps:
     command: 'build'
     configuration: '$(buildConfiguration)'
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: custom
+    custom: tool
+    arguments: 'install -g dotnetsay'
+  displayName: 'Install dotnetsay'
+
+- script: dotnetsay "Hello from global tool"
+  displayName: 'Using "dotnetsay" global tool'
